# osdev

./: .gitignore  CMakeLists.txt  Makefile  README  boot_print.asm  boot_sect.asm  console.c  console.h  linker.ld  main.c  mkhd.sh  mkiso.sh  multiboot.asm
boot/: CMakeLists.txt  disk.asm  main.asm  pm.asm
doom/: CMakeLists.txt
kernel/: CMakeLists.txt  bmp.c  bmp.h  console.c  console.h  descriptor_tables.c  descriptor_tables.h  div64.c  dwarf.c  dwarf.h  elf.c  elf.h  gdt.asm  interrupt.asm  isr.c  isr.h  kmalloc.c  kmalloc.h  main.c  multiboot.c  multiboot.h  psf.c  psf.h  shell.c  shell.h  stdio_impl.c
kernel/arch/x86/: mmu.c  mmu.h
kernel/debug/: dwarf.c  dwarf.h  ubsan.c
kernel/drivers/: acpi.c  acpi.h  ahci.c  ahci.h  ata.c  ata.h  keyboard.c  keyboard.h  pci.c  pci.h  pci_registry.c  pci_registry.h  ports.c  ports.h  serial.c  serial.h  timer.c  timer.h  vga.c  vga.h
kernel/fatfs/: diskio.c  ff.c  ffconf.h  ffsystem.c  integer.h
kernel/tests/: fatfs.c  pages.c  path.c  stdio.c  tests.h  vector.c
libc/: CMakeLists.txt  byteswap.h  common.h  ctype.c  ctype.h  errno.c  errno.h  float.h  limits.h  malloc.c  malloc.h  math.c  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  string.c  string.h  vector.c  vector.h  wchar.c  wchar.h
libc/stdio/: fprintf.c  printf.c  snprintf.c  sprintf.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
libc/test/: vector.c
